fix whitespace

--- a/src/_styles/main.css
+++ b/src/_styles/main.css
@@ -47,6 +47,7 @@ body, html {
 }
 
 p, a, a:active, li {
+	white-space: pre;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.381;
